[tool.poetry]
name = "ghpypi"
version = "0.0.0"  # DO NOT CHANGE -- set during build
description = "A custom package index generator."
authors = ["Paul Lockaby <paul@paullockaby.com>"]
packages = [{include = "ghpypi", from = "src"}]

[tool.poetry.scripts]
ghpypi = "ghpypi:main"

[tool.poetry.dependencies]
python = "^3.8"
PyGithub = "^1.58.1"
distlib = "^0.3.6"
Jinja2 = "^3.1.2"
packaging = "^23.1"
atomicwrites = "^1.4.1"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
pytest-mypy = "^0.10.3"
pre-commit = "^3.2.2"

# mypy dependencies
types-requests = "^2.28.11.17"
types-atomicwrites = "^1.4.5.1"
responses = "^0.23.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
