[tool.poetry]
name = "ghpypi"
version = "0.0.0"  # DO NOT CHANGE -- set during build
description = "A custom package index generator."
authors = ["Paul Lockaby <paul@paullockaby.com>"]
packages = [{include = "ghpypi", from = "src"}]

[tool.poetry.scripts]
ghpypi = "ghpypi:main"

[tool.poetry.dependencies]
python = "^3.8"
PyGithub = "^2.1.1"
distlib = "^0.3.7"
Jinja2 = "^3.1.2"
packaging = "^23.2"
atomicwrites = "^1.4.1"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
pytest-mypy = "^0.10.3"
pre-commit = "^3.5"

# mypy dependencies
types-requests = "^2.31.0.8"
types-atomicwrites = "^1.4.5.1"
responses = "^0.24.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
